All sections colors changed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -78,3 +78,14 @@ section {
   opacity: 0.5;
 }
 
+#section1 {
+  color: #E55050;
+}
+
+#section2 {
+  color: #E55050;
+}
+
+#section3 {
+  color: #E55050;
+}
