--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -89,3 +89,30 @@ section {
 #section3 {
   color: #E55050;
 }
+
+.sectionTitle {
+  text-align: center;
+  font-weight: bold;
+  font-size: 50px;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.sectionTitle p {
+  font-size: 25px;
+  text-align: center;
+}
+
+#home {
+  margin-top: 10px;
+}
+
+#home-sample {
+  margin-left: 55px;
+  width: 20%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
